--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "codeigniter4/framework": "^4.0",
+        "codeigniter4/shield": "dev-develop",
         "fakerphp/faker": "^1.21"
     },
     "require-dev": {
