--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.4 || ^8.0",
         "codeigniter4/framework": "^4.0",
         "codeigniter4/shield": "dev-develop",
+        "dompdf/dompdf": "^2.0",
         "fakerphp/faker": "^1.21"
     },
     "require-dev": {
